Version 1.19
------------
  * expose more of the cpphs API

Version 1.18
------------
  * better lexing of Template Haskell single quotes (thanks to Stefan Wehr)
  * (1.18.1): fix incomplete pattern match
  * (1.18.2): bugfix for erroneous boolean intepretation of some macro
              expansions in #if clauses
  * (1.18.3): further rewrites of the #if expression parser
  * (1.18.4): fix the accidental flipping of comment-stripping behaviour
              with --cpp -traditional flags
  * (1.18.5): fix a bug with windows filepath directory separators in a
              #include
  * (1.18.6): bugfix to reject a macro usage with different arity than
              its definition
  * (1.18.7): bugfix to accept a #include with absolute filepath
  * (1.18.8): fix version number
  * (1.18.9): accept #if defined foo as well as #if defined(foo)

Version 1.17
------------
  * recursively evaluate #if expressions after macro expansion (fix)
  * (1.17.1): report the right version with cpphs --version

Version 1.16
------------
  * fix interaction of runCpphsReturningSymTab with --nomacro

Version 1.15
------------
  * Fix the interaction of --nomacro with --strip.
  * Fix the error message received when # appears without a command.

Version 1.14
------------
  * New API to return symbol table after processing.

Version 1.13
------------
  * Accept -U cmdline option for compatibility with cpp.

Version 1.12
------------
  * Allow it to build with ghc-7.2.

Version 1.11
------------
  * API change: runCpphs, cppIfdef, and macroPass are now in the IO monad.

Version 1.10
-----------
  * New command-line option: "--linepragma"
    It converts #line droppings into {-# LINE #-}.

Version 1.9
-----------
  * Bugfix for #undef.

Version 1.8
-----------
  * Bugfix for off-by-one error in line numbers with --include=file.

Version 1.7
-----------
  * Bugfix in interaction of --unlit with \end{code}

Version 1.6
-----------
  * New command-line option: "--include=filename".