@@ -1,0 +1,34 @@
+The cpphs library and command-line tool is written by and copyright to
+    (c) copyright 2004-2015    Malcolm Wallace
+
+The cpphs library is licensed under the terms of the GNU Lesser
+General Public Licence (LGPL), which can be found in the file called
+LICENCE-LGPL, with the following special exception:
+
+----
+As a relaxation of clause 6 of the LGPL, the copyright holders of this
+library give permission to use, copy, link, modify, and distribute,
+binary-only object-code versions of an executable linked with the
+original unmodified Library, without requiring the supply of any
+mechanism to modify or replace the Library and relink (clauses 6a,
+6b, 6c, 6d, 6e), provided that all the other terms of clause 6 are
+complied with.
+----
+
+The command-line tool cpphs is licensed under the terms of the GNU
+General Public Licence (GPL), which can be found in the file called
+LICENCE-GPL.
+
+This library and toolset is distributed in the hope that it will be
+useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+Licences for more details.
+
+If you have a commercial use for cpphs and find the terms of the (L)GPL
+too onerous, you can instead choose to distribute unmodified binaries
+(not source), under the terms of LICENCE-commercial.
+
+If any of these licensing terms are not acceptable to you, please
+contact me for negotiation.  :-)
+    Malcolm.Wallace@me.com
+
