@@ -728,12 +728,11 @@ cpp's behaviour.  Please mail
         Malcolm.Wallace@me.com</a> 
 </ul>
 
-<p><b>Copyright:</b> &copy; 2004-2014 Malcolm Wallace,
-except for ParseLib (Copyright &copy; 1995 Graham Hutton and Erik Meijer)
+<p><b>Copyright:</b> &copy; 2004-2015 Malcolm Wallace
 
 <p><b>License:</b> The library modules in cpphs are distributed under
 the terms of the LGPL (see file <a href="LICENCE-LGPL">LICENCE-LGPL</a>
-for more details).  If that's a problem for you, contact me to make
+for more details), with a special exception for static linking (see file <a href="COPYRIGHT">COPYRIGHT</a>.  If that's a problem for you, contact me to make
 other arrangements.  The application module 'cpphs.hs' itself is GPL
 (see file <a href="LICENCE-GPL">LICENCE-GPL</a>).  If you have a
 commercial use for cpphs and find the terms of the (L)GPL too onerous,
